<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:background="@color/colorBackground">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="-39dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageHeader"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/header_background"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/colorSemiDark"
                    app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageMenu"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/menu_background"
                    android:contentDescription="@string/app_name"
                    android:padding="7dp"
                    android:src="@drawable/ic_menu"
                    app:tint="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="Search for food"
                    android:textColor="@color/colorWhite"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/imageMenu" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/search_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/textSearch">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_search"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="6dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:background="@null"
                        android:textColor="@color/colorPrimaryText"
                        android:gravity="center_vertical"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        tools:ignore="Autofill"
                        android:textSize="18sp"
                        android:hint="@string/search" />

                </LinearLayout>

                <View
                    android:id="@+id/viewSupporter"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_marginBottom="50dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardRestaurants"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/viewSupporter"
                    app:layout_constraintEnd_toStartOf="@+id/cardDelivery"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/restaurant" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Restaurants"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:gravity="center" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardDelivery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardRestaurants"
                    app:layout_constraintTop_toBottomOf="@+id/viewSupporter"
                    app:cardBackgroundColor="@color/colorWhite"
                    android:layout_marginEnd="25dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/food_delivery"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/delivery"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardBurgers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardRestaurants"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="8dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/pambazo" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/burgers"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardChicken"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/cardBurgers"
                    app:layout_constraintTop_toBottomOf="@+id/cardRestaurants"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="13dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/fried_chicken" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/chicken"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPizza"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/cardChicken"
                    app:layout_constraintTop_toBottomOf="@+id/cardDelivery"
                    app:cardBackgroundColor="@color/colorWhite"
                    android:layout_marginStart="13dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginTop="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/pizza" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/pizza"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSnacks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardBurgers"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="8dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/french_fries" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/snacks"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardCoffee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/cardSnacks"
                    app:layout_constraintTop_toBottomOf="@+id/cardChicken"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="8dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/coffee" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/coffee"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSushi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/cardCoffee"
                    app:layout_constraintTop_toBottomOf="@+id/cardPizza"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="8dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/nigiri" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="Sushi"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/colorWhite"
            app:menu="@menu/menu_bottom_navigation"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>